{{$NEXT}}

1.20200306.1 2020-03-06 UTC
  - Add comment to process report files and output csv

1.20200305.1 2020-03-05 UTC
  - Added tests and Bug fixes

1.20200303.1 2020-03-03 UTC
  - First release - Experimental TLS-RPT classes